--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Swipper JS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
@@ -45,14 +47,37 @@
             <article class="hero-text">
                 <h2 class="tagline">Selamat Datang di Toko Mekkah</h2>
                 <p class="tagline">Pusat Oleh - Oleh Arab Haji & Umrah Terlengkap, Langsung Dari Tanah Suci.</p>
-                <h4 class="product-text"></h4>
+
+                <div class="tag-list tagline">
+                    <div class="inner">
+                        <div class="tag">Oleh - Oleh Arab Haji & Umroh</div>
+                        <div class="tag">Busana Muslim</div>
+                        <div class="tag">Kurma</div>
+                        <div class="tag">Madu</div>
+                        <div class="tag">Herbal</div>
+                        <div class="tag">Perlengkapan Sholat</div>
+
+                        <div class="tag">Oleh - Oleh Arab Haji & Umroh</div>
+                        <div class="tag">Busana Muslim</div>
+                        <div class="tag">Kurma</div>
+                        <div class="tag">Madu</div>
+                        <div class="tag">Herbal</div>
+                        <div class="tag">Perlengkapan Sholat</div>
+                    </div>
+                    <div class="fade"></div>
+                </div>
 
                 <div class="hero-button tagline">
                     <a href="">Lihat Oleh - Oleh</a>
                     <a href="">Pesan Sekarang</a>
                 </div>
             </article>
+
+            <!-- Slider main container -->
+
         </section>
+
+        
 
     </main>
 
@@ -60,7 +85,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
     <script src="gsap.js"></script>
-    <!--  -->
+    <!-- Swipper JS-->
     <script src="script.js"></script>
 
 </body>
