--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!-- Swipper JS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <!-- AOS JS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
@@ -38,6 +38,10 @@
 
             <div class="contact-button">
                 <a href="">Contact</a>
+            </div>
+
+            <div class="hamburger-menu">
+                <img src="assets/hamburger.png" alt="">
             </div>
         </nav>
     </header>
@@ -84,8 +88,13 @@
     <!-- GSAP Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
-    <script src="gsap.js"></script>
-    <!-- Swipper JS-->
+    <script src="js-library/"></script>
+
+    <!-- AOS JS-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="js-library/animateOnScroll.js"></script>
+
+    <!-- My Script -->
     <script src="script.js"></script>
 
 </body>
