--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- GSAP Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
-    <script src="js-library/"></script>
+    <script src="js-library/gsap.js"></script>
 
     <!-- AOS JS-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
