--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
+    <!-- Montserrat -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
+    <!-- Raleway -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
+
+    <!-- Paragraf -->
+    <!-- Roboto -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
 
     <title>Toko Mekkah</title>
 </head>
@@ -25,7 +39,8 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <h3>Toko Mekkah</h3>
+                <!-- <img src="assets/logo.png" alt=""> -->
+                <h2>Toko Mekkah</h2>
             </div>
 
             <div class="navbar-menu">
@@ -76,9 +91,135 @@
                     <a href="">Pesan Sekarang</a>
                 </div>
             </article>
+        </section>
 
-            <!-- Slider main container -->
+        <!-- Best Seller Section -->
+        <section class="best-seller">
+            <div class="best-seller-heading" data-aos="fade-up" data-aos-duration="1500" data-aos-offset="300">
+                <h3>Best Items</h3>
+                <h1>Our Best Seller Items</h1>
+            </div>
 
+            <div class="best-seller-cards">
+                <!-- Dupa Lidi Rainbow -->
+                <article class="best-seller-items" data-aos="flip-left" data-aos-duration="1500">
+                    <img src="assets/best-seller/dupa-lidi-rainbow.webp" alt="">
+                    <div class="text-card">
+                        <div class="rating-tag">
+                            <div class="badge">Best Seller</div>
+                            <div class="rating">
+                                <img src="assets/icons/star.png" alt="">
+                                <p>4.8</p>
+                            </div>
+                        </div>
+                        <h4>Dupa Lidi Rainbow</h4>
+                        <h3>Rp18.000</h3>
+                        <a href="">Pesan Sekarang</a>
+                    </div>
+                </article>
+
+                <!-- Dupa Lidi Afrah -->
+                <article class="best-seller-items" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500">
+                    <img src="assets/best-seller/dupa-lidi-afrah.webp" alt="">
+                    <div class="text-card">
+                        <div class="rating-tag">
+                            <div class="badge">Best Seller</div>
+                            <div class="rating">
+                                <img src="assets/icons/star.png" alt="">
+                                <p>4.8</p>
+                            </div>
+                        </div>
+                        <h4>Dupa Lidi Afrah</h4>
+                        <h3>Rp17.000</h3>
+                        <a href="">Pesan Sekarang</a>
+                    </div>
+                </article>
+
+                <!-- Dupa Kerucut Mansur -->
+                <article class="best-seller-items" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="600">
+                    <img src="assets/best-seller/dupa-kerucut-mansur.webp" alt="">
+                    <div class="text-card">
+                        <div class="rating-tag">
+                            <div class="badge">Best Seller</div>
+                            <div class="rating">
+                                <img src="assets/icons/star.png" alt="">
+                                <p>4.8</p>
+                            </div>
+                        </div>
+                        <h4>Dupa Kerucut Mansur</h4>
+                        <h3>Rp26.000</h3>
+                        <a href="">Pesan Sekarang</a>
+                    </div>
+                </article>
+
+                <!-- Dupa Kerucut Al-Yamani -->
+                <article class="best-seller-items" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="700">
+                    <img src="assets/best-seller/dupa-kerucut-al-yamani.webp" alt="">
+                    <div class="text-card">
+                        <div class="rating-tag">
+                            <div class="badge">Best Seller</div>
+                            <div class="rating">
+                                <img src="assets/icons/star.png" alt="">
+                                <p>4.8</p>
+                            </div>
+                        </div>
+                        <h4>Dupa Kerucut Al - Yamani</h4>
+                        <h3>Rp11.000</h3>
+                        <a href="">Pesan Sekarang</a>
+                    </div>
+                </article>
+
+                <!-- Celana Dalam Kertas -->
+                <article class="best-seller-items" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="800">
+                    <img src="assets/best-seller/celana-dalam-kertas.webp" alt="">
+                    <div class="text-card">
+                        <div class="rating-tag">
+                            <div class="badge">Best Seller</div>
+                            <div class="rating">
+                                <img src="assets/icons/star.png" alt="">
+                                <p>5</p>
+                            </div>
+                        </div>
+                        <h4>Celana Dalam Kertas</h4>
+                        <h3>Rp29.000</h3>
+                        <a href="">Pesan Sekarang</a>
+                    </div>
+                </article>
+
+                <!-- Songkok Wadimor Polos -->
+                <article class="best-seller-items" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="900">
+                    <img src="assets/best-seller/kopiah-wadimor.webp" alt="">
+                    <div class="text-card">
+                        <div class="rating-tag">
+                            <div class="badge">Best Seller</div>
+                            <div class="rating">
+                                <img src="assets/icons/star.png" alt="">
+                                <p>4.8</p>
+                            </div>
+                        </div>
+                        <h4>Songkok Wadimor Polos</h4>
+                        <h3>Rp57.000</h3>
+                        <a href="">Pesan Sekarang</a>
+                    </div>
+                </article>
+
+                <!-- Tasbih Mutiara / Tasbih 33 / Tasbih 99 -->
+                <article class="best-seller-items" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="1000">
+                    <img src="assets/best-seller/tasbih-mutiara.webp" alt="">
+                    <div class="text-card">
+                        <div class="rating-tag">
+                            <div class="badge">Best Seller</div>
+                            <div class="rating">
+                                <img src="assets/icons/star.png" alt="">
+                                <p>4.8</p>
+                            </div>
+                        </div>
+                        <h4>Songkok Wadimor Polos</h4>
+                        <h3>Rp5.000 - Rp8.000</h3>
+                        <a href="">Pesan Sekarang</a>
+                    </div>
+                </article>
+            </div>
         </section>
 
         
