--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <!-- <img src="assets/logo.png" alt=""> -->
-                <h2>Toko Mekkah</h2>
+                <img src="assets/logo.webp" alt="">
             </div>
 
             <div class="navbar-menu">
@@ -62,9 +61,11 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero ">
+            <div class="hero-image" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="800">
+                <img src="assets/logo.webp" alt="">
+            </div>
             <article class="hero-text">
-                <h2 class="tagline">Selamat Datang di Toko Mekkah</h2>
                 <p class="tagline">Pusat Oleh - Oleh Arab Haji & Umrah Terlengkap, Langsung Dari Tanah Suci.</p>
 
                 <div class="tag-list tagline">
@@ -94,7 +95,7 @@
         </section>
 
         <!-- Best Seller Section -->
-        <section class="best-seller">
+        <section class="best-seller ">
             <div class="best-seller-heading" data-aos="fade-up" data-aos-duration="1500" data-aos-offset="300">
                 <h3>Best Items</h3>
                 <h1>Our Best Seller Items</h1>
@@ -220,6 +221,43 @@
                     </div>
                 </article>
             </div>
+        </section>
+
+        <!-- About Section Start -->
+        <section class="about section-light">
+            <div class="about-image" data-aos="zoom-out" data-aos-duration="300">
+                <img src="assets/logo.webp" alt="Logo Toko Mekkah" >
+            </div>
+            <!-- About Text -->
+            <article class="about-text" data-aos="zoom-out" data-aos-duration="300" data-aos-delay="500">
+                <h3>About Us</h3>
+                <h1>Kenapa Memilih Toko Mekkah ?</h1>
+                <p id="about-toko-mekkah">Toko Mekkah adalah toko Penyedia Oleh - Oleh Haji & Umroh khas Arab dan menyediakan Perlengkapan ibadah terpercaya yang telah hadir unuk memenuhi kebutuhan spiritual masyarakat Indonesia.</p>
+                <!-- Value -->
+                <div class="value">
+                    <div class="value-items">
+                        <p>Product Asli dan Berkualitas</p>
+                        <a href="www.flaticon.com" title="Flaticon"><img src="assets/icons/check-mark.png" alt="Product"></a>
+                    </div>
+                    <div class="value-items">
+                        <p>Harga Bersahabat</p>
+                        <a href="www.flaticon.com" title="Flaticon"><img src="assets/icons/check-mark.png" alt="Product"></a>
+                    </div>
+                    <div class="value-items">
+                        <p>Pelayanan Ramah & Cepat</p>
+                        <a href="www.flaticon.com" title="Flaticon"><img src="assets/icons/check-mark.png" alt="Product"></a>
+                    </div>
+                    <div class="value-items">
+                        <p>Pesan Via WhatsApp</p>
+                        <a href="www.flaticon.com" title="Flaticon"><img src="assets/icons/check-mark.png" alt="Product"></a>
+                    </div>
+                    <div class="value-items">
+                        <p>Promo & Diskon Berkala</p>
+                        <a href="www.flaticon.com" title="Flaticon"><img src="assets/icons/check-mark.png" alt="Product"></a>
+                    </div>
+                </div>
+                <a href="">Learn More</a>
+            </article>
         </section>
 
         
