--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                 <p>4.8</p>
                             </div>
                         </div>
-                        <h4>Songkok Wadimor Polos</h4>
+                        <h4>Tasbih Mutiara / Tasbih 33 / Tasbih 99</h4>
                         <h3>Rp5.000 - Rp8.000</h3>
                         <a href="">Pesan Sekarang</a>
                     </div>
