--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="hero-button tagline">
-                    <a href="">Lihat Oleh - Oleh</a>
+                    <a href="#product">Lihat Oleh - Oleh</a>
                     <a href="">Pesan Sekarang</a>
                 </div>
             </article>
@@ -258,6 +258,46 @@
                 </div>
                 <a href="">Learn More</a>
             </article>
+        </section>
+
+        <section class="product" id="product">
+            <div class="product-header">
+                <div class="product-menu">
+                    <a href="#oleh-oleh">Oleh - Oleh</a>
+                    <a href="#busana-muslim">Busana Muslim</a>
+                    <a href="#kurma">Kurma</a>
+                    <a href="#madu">Madu</a>
+                    <a href="#herbal">Herbal</a>
+                    <a href="#perlengkapan-sholat">Perlengkapan Sholat</a>
+                </div>
+            </div>
+
+            <div class="product-main">
+                <div class="" id="oleh-oleh">
+
+                </div>
+
+                <div class="" id="busana-muslim">
+
+                </div>
+
+                <div class="" id="kurma">
+
+                </div>
+
+                <div class="" id="madu">
+
+                </div>
+
+                <div class="" id="herbal">
+
+                </div>
+
+                <div class="" id="perlengkapan-sholat">
+
+                </div>
+
+            </div>
         </section>
 
         
